adding features from text

--- a/notebooks/lecture_5_feature_from_text.ipynb
+++ b/notebooks/lecture_5_feature_from_text.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 90,
    "id": "d91d87ef",
    "metadata": {
     "tags": []
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 91,
    "id": "a5af7999",
    "metadata": {
     "tags": []
@@ -27,6 +27,18 @@
    "outputs": [],
    "source": [
     "import re"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c4a2545-1800-428d-a841-3fc7a879f5c9",
+   "metadata": {},
+   "source": [
+    "Install the following packages: <br>\n",
+    "`pip install -U pip setuptools wheel` <br>\n",
+    "`pip install -U spacy` <br>\n",
+    "`python -m spacy download en_core_web_sm` <br>\n",
+    "`python -m spacy download es_core_news_sm`<br>"
    ]
   },
   {
@@ -54,6 +66,7 @@
     "\n",
     "1. Remove listings that advertise multiple units for sale.\n",
     "2. Fix the \"number of bedrooms\" in some listings.\n",
+    "4. Fix the location feature. Encoding it as a categorical variable.\n",
     "3. Generate relevant features from textual information."
    ]
   },
@@ -118,7 +131,7 @@
    "metadata": {},
    "source": [
     "## Removing ads from multiple units\n",
-    "If features[0] starts with \"desde\" it means that the ad is advertising multiple units. See for example this add in which the price is None and features start with \"desde\"."
+    "If features starts with \"desde\" it means that the ad is advertising multiple units. See for example this add in which the price is None and features start with \"desde\"."
    ]
   },
   {
@@ -566,12 +579,7 @@
    "metadata": {},
    "source": [
     "### Finding features in descriptions\n",
-    "Let's tokenize the descriptions and compute in how many documents each word apeards.\n",
-    "\n",
-    "`pip install -U pip setuptools wheel` <br>\n",
-    "`pip install -U spacy` <br>\n",
-    "`python -m spacy download en_core_web_sm` <br>\n",
-    "`python -m spacy download es_core_news_sm`<br>"
+    "Let's tokenize the descriptions and compute in how many documents each word apeards."
    ]
   },
   {
@@ -655,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 92,
    "id": "5b7383b6",
    "metadata": {
     "tags": []
@@ -663,9 +671,10 @@
    "outputs": [],
    "source": [
     "# you can filter using POS\n",
+    "pos_list = [\"VERB\", \"NOUN\", \"ADJ\", \"ADV\"]\n",
     "def clean_text(text):\n",
     "    doc = nlp(text)\n",
-    "    tokens = [token.text.lower() for token in doc if token.pos_ in [\"VERB\", \"NOUN\", \"ADJ\", \"ADV\"]]\n",
+    "    tokens = [token.text.lower() for token in doc if token.pos_ in pos_list]\n",
     "    return tokens"
    ]
   },
@@ -782,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 89,
    "id": "3dd8735a",
    "metadata": {
     "tags": []
@@ -801,13 +810,14 @@
        "(689, 173)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import random\n",
+    "random.seed(4)\n",
     "random.shuffle(data_v2)\n",
     "\n",
     "N = int(len(data_v2)*.8)\n",
@@ -1182,12 +1192,13 @@
    "id": "819f430a",
    "metadata": {},
    "source": [
-    "#### location features"
+    "### location features\n",
+    "Note that some of the location strings have issues."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 93,
    "id": "2ddb1801",
    "metadata": {
     "tags": []
@@ -1196,11 +1207,9 @@
     {
      "data": {
       "text/plain": [
-       "array(['Barcelona - Besòs - Maresme',\n",
-       "       'Barcelona - Diagonal Mar i el Front Marítim del Poblenou',\n",
-       "       'Barcelona - Dreta de l´Eixample',\n",
+       "array(['Barcelona - Besòs - Maresme', 'Barcelona - Dreta de l´Eixample',\n",
        "       'Barcelona - Dreta de l´Eixample\\nVer mapa',\n",
-       "       'Barcelona - El Camp de l´Arpa del Clot',\n",
+       "       'Barcelona - El Camp de l´Arpa del Clot', 'Barcelona - El Clot',\n",
        "       'Barcelona - El Parc i la Llacuna del Poblenou',\n",
        "       'Barcelona - Fort Pienc',\n",
        "       'Barcelona - La Nova Esquerra de l´Eixample',\n",
@@ -1210,10 +1219,10 @@
        "       'Barcelona - Poblenou', 'Barcelona - Poblenou\\nVer mapa',\n",
        "       'Barcelona - Provençals del Poblenou',\n",
        "       'Barcelona - Sagrada Família', 'Barcelona - Sant Antoni'],\n",
-       "      dtype='<U56')"
+       "      dtype='<U51')"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 94,
    "id": "42d7e25e",
    "metadata": {
     "tags": []
@@ -1233,10 +1242,8 @@
     {
      "data": {
       "text/plain": [
-       "array(['Barcelona - Besòs - Maresme',\n",
-       "       'Barcelona - Diagonal Mar i el Front Marítim del Poblenou',\n",
-       "       'Barcelona - Dreta de l´Eixample',\n",
-       "       'Barcelona - El Camp de l´Arpa del Clot',\n",
+       "array(['Barcelona - Besòs - Maresme', 'Barcelona - Dreta de l´Eixample',\n",
+       "       'Barcelona - El Camp de l´Arpa del Clot', 'Barcelona - El Clot',\n",
        "       'Barcelona - El Parc i la Llacuna del Poblenou',\n",
        "       'Barcelona - Fort Pienc',\n",
        "       'Barcelona - La Nova Esquerra de l´Eixample',\n",
@@ -1244,10 +1251,10 @@
        "       'Barcelona - L´Antiga Esquerra de l´Eixample', 'Barcelona - Navas',\n",
        "       'Barcelona - Poblenou', 'Barcelona - Provençals del Poblenou',\n",
        "       'Barcelona - Sagrada Família', 'Barcelona - Sant Antoni'],\n",
-       "      dtype='<U56')"
+       "      dtype='<U45')"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1297,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 95,
    "id": "729ca707",
    "metadata": {
     "tags": []
@@ -1311,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 96,
    "id": "3f10aa63",
    "metadata": {
     "tags": []
@@ -1323,7 +1330,7 @@
        "-1"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1778,32 +1785,40 @@
     "There are many ways to do selecting the words to include in you model (feature selection). Implement the following strategies. Create new data frame based on these new text features.\n",
     "1. Term Frequency (TF): Calculate the frequency of each word in the corpus and select the top-N words with the highest TF values. This can be a simple way to start feature selection.\n",
     "2. Inverse Document Frequency (IDF): Calculate the IDF for each word to measure how unique and informative it is across the entire corpus. Select words with high IDF scores.\n",
-    "3. Correlation Coefficient: Compute the correlation coefficient between the presence/absence of each word and the continuous labels. Words with high absolute correlation values may be good features."
+    "3. Correlation Coefficient: Compute the correlation coefficient between the presence/absence of each word and the continuous labels. Words with high absolute correlation values may be good features.\n",
+    "\n",
+    "If you have time, you can use the tfidf score instead of 0,1 for each feature."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 88,
    "id": "3def1c76-29c4-4af9-a918-a33599b31cde",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'tokens'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[85], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# use the train set to compute your list of features\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m train[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mtokens\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'tokens'"
-     ]
+     "data": {
+      "text/plain": [
+       "array(['oportunidad', 'piso', 'situado', 'muy', 'cercano', 'tipo',\n",
+       "       'comercios', 'hospital', 'colegios', 'muy', 'bien', 'comunicado',\n",
+       "       'línea', 'línea', 'parada', 'líneas', 'autobuses', 'vivienda',\n",
+       "       'consta', 'distribuidos', 'baño', 'ducha', 'cocina',\n",
+       "       'independiente', 'comedor', 'piso', 'perfecto', 'actualizar',\n",
+       "       'suelos', 'gres', 'finca', 'dispone', 'ascensor', 'tercero',\n",
+       "       'real', 'altura', 'año', 'gastos', 'honorarios', 'agencia', 'no',\n",
+       "       'incluidos', 'precio'], dtype='<U13')"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# use the train set to compute your list of features\n",
-    "train[0].token"
+    "np.array(train[0][\"tokens\"])"
    ]
   },
   {
