--- a/README.org
+++ b/README.org
@@ -26,8 +26,8 @@ Here is a tentative schedule for the course:
 | Sep 1 | Command-line & git| | Lab 2|
 | Sep 4 | Labor Day - No Class| | | 
 | Sep 8 | Data Formats, XML, XPath | [[https://github.com/yanneta/msds692/blob/master/notebooks/lecture_4_xml_xpath.ipynb][lecture_4_xml_xpath.ipynb]] | HW2: Data pipeline (due Sep 14)|
-| Sep 11 | Text feature extraction| | HW3: TFIDF (due Sep 21)|
-| Sep 15 | Text manipulation, Spacy | | |
+| Sep 11 | Text feature extraction|[[https://github.com/yanneta/msds692/blob/master/notebooks/lecture_5_feature_from_text.ipynb][lecture_5_feature_from_text.ipynb]] | HW3: TFIDF (due Sep 21)|
+| Sep 15 | Text manipulation, Spacy | [[https://github.com/yanneta/msds692/blob/master/notebooks/lecture_6_spacy.ipynb][lecture_6_spacy.ipynb]], [[https://github.com/yanneta/msds692/blob/master/notebooks/lab_lect_6.ipynb][lab_lec_6.ipynb]]| |
 | Sep 18 | EXAM/  Hashtable implementations| | HW4: Hash table (due Sep 28)| 
 | Sep 22 | Scraping with Selenium | | |
 | Sep 25 | Selenium Part 2 | | |
