--- a/README.org
+++ b/README.org
@@ -25,9 +25,9 @@ Here is a tentative schedule for the course:
 | Aug 28 | Terminal & command-line| | Lab 1|
 | Sep 1 | Command-line & git| | Lab 2|
 | Sep 4 | Labor Day - No Class| | | 
-| Sep 8 | Data Formats, XML, XPath | [[https://github.com/yanneta/msds692/blob/master/notebooks/lecture_4_xml_xpath.ipynb][lecture_4_xml_xpath.ipynb]] | HW2: Data pipeline (due Sep 14)|
+| Sep 8 | Data Formats, XML, XPath | [[https://github.com/yanneta/msds692/blob/master/notebooks/lecture_4_xml_xpath.ipynb][lecture_4_xml_xpath.ipynb]] | HW2: Data pipeline (due Sep 14) Lab 3|
 | Sep 11 | Text feature extraction|[[https://github.com/yanneta/msds692/blob/master/notebooks/lecture_5_feature_from_text.ipynb][lecture_5_feature_from_text.ipynb]] | HW3: TFIDF (due Sep 21)|
-| Sep 15 | Text manipulation, Spacy | [[https://github.com/yanneta/msds692/blob/master/notebooks/lecture_6_spacy.ipynb][lecture_6_spacy.ipynb]], [[https://github.com/yanneta/msds692/blob/master/notebooks/lab_lect_6.ipynb][lab_lec_6.ipynb]]| |
+| Sep 15 | Text manipulation, Spacy | [[https://github.com/yanneta/msds692/blob/master/notebooks/lecture_6_spacy.ipynb][lecture_6_spacy.ipynb]], [[https://github.com/yanneta/msds692/blob/master/notebooks/lab_lect_6.ipynb][lab_lec_6.ipynb]]| Lab 4 |
 | Sep 18 | EXAM/  Hashtable implementations| | HW4: Hash table (due Sep 28)| 
 | Sep 22 | Scraping with Selenium | | |
 | Sep 25 | Selenium Part 2 | | |
